// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Push> accepts a direction="down" prop 1`] = `
<div
  className="down"
>
  Text
</div>
`;

exports[`<Push> accepts a direction="left" prop 1`] = `
<div
  className="left"
>
  Text
</div>
`;

exports[`<Push> accepts a direction="right" prop 1`] = `
<div
  className="right"
>
  Text
</div>
`;

exports[`<Push> accepts a direction="up" prop 1`] = `
<div
  className="up"
>
  Text
</div>
`;
